--- a/css/src/components/dropdown.css
+++ b/css/src/components/dropdown.css
@@ -20,7 +20,7 @@
     border-top: var(--spacing-xs) solid var(--secondary-light);
 }
 
-.Dropdown-wrapper {
+.Dropdown-errorWrapper {
     min-height: var(--spacing-7);
 }
 
@@ -59,7 +59,7 @@
     padding-bottom: 10px;
 }
 
-.Dropdown .ListCheckbox .Checkbox {
+.Dropdown .ListCheckbox-childWrapper .Checkbox {
     overflow: hidden;
 }
 
@@ -96,6 +96,11 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.Option-text--wrap,
+.Dropdown--wrap.Dropdown .ListCheckbox .Checkbox .Text {
+    white-space: unset;
 }
 
 .Option-wrapper--icon {
